unpackaged/main/default/objects/Opportunity/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>IF(MONTH(Class_Start_Date__c)&gt;6, "Fall", 
IF(MONTH(Class_Start_Date__c)&gt;4, "Summer",
"Spring"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>