unpackaged/main/default/objects/Opportunity/fields/Term_Start__c.field-meta.xml
<CustomField>
    <fullName>Term_Start__c</fullName>
    <formula>IF( TEXT(Type) = "Renewal","Renewed", IF( Fall_Students__c =0, "New Spring","New Fall"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semester Start</label>
    <type>Text</type>
</CustomField>