unpackaged/main/default/objects/Opportunity/fields/TermYear__c.field-meta.xml
<CustomField>
    <fullName>TermYear__c</fullName>
    <formula>School_Year__c &amp;" "&amp; Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TermYear</label>
    <type>Text</type>
</CustomField>