unpackaged/main/default/objects/Opportunity/fields/This_Week__c.field-meta.xml
<CustomField>
    <fullName>This_Week__c</fullName>
    <formula>Week_No__c - 
MIN(
MCEILING((365 - (DATEVALUE(TEXT(YEAR( Today())) + "-12-31") - Today()) +
IF( MOD(YEAR(Today()),4)=0, 1,0)) / 7) , 52)
=0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Week</label>
    <type>Checkbox</type>
</CustomField>