unpackaged/main/default/objects/Opportunity/fields/Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Period__c</fullName>
    <label>Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semester</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>