unpackaged/main/default/objects/Opportunity/fields/Trigger_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>bulk processing</description>
    <label>Trigger Rollup</label>
    <type>Checkbox</type>
</CustomField>