unpackaged/main/default/objects/Opportunity/fields/Tutor_Opp_Stages__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Opp_Stages__c</fullName>
    <label>Tutor Opp Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Demo scheduled</fullName>
            </value>
            <value>
                <fullName>Demo completed</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Verbal commitment</fullName>
            </value>
            <value>
                <fullName>Sign up for implementation option</fullName>
            </value>
            <value>
                <fullName>Implementation session complete</fullName>
            </value>
            <value>
                <fullName>Courses setup</fullName>
            </value>
            <value>
                <fullName>Students enrolled (Closed - Won)</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
            <value>
                <fullName>Closed-Lost</fullName>
                <isActive>false</isActive>
                <label>Closed-Lost</label>
            </value>
            <value>
                <fullName>Closed-Won</fullName>
                <isActive>false</isActive>
                <label>Closed-Won</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>