unpackaged/main/default/objects/Opportunity/fields/Tutor_Students_Comped__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Students_Comped__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Students Comped rolled up from Tutor Course Sections</description>
    <label>Tutor Students Comped</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>