unpackaged/main/default/objects/Opportunity/fields/Tutor_Students_Paid__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Students_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tutor Students Paid</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>