unpackaged/main/default/objects/Opportunity/fields/Week_No__c.field-meta.xml
<CustomField>
    <fullName>Week_No__c</fullName>
    <formula>MIN( 
MCEILING((365 - (DATEVALUE(TEXT(YEAR( CloseDate )) + "-12-31") - CloseDate ) + 
IF( MOD(YEAR(CloseDate),4)=0, 1,0)) / 7) , 52)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>