unpackaged/main/default/objects/Opportunity/fields/WillMakeDept__c.field-meta.xml
<CustomField>
    <fullName>WillMakeDept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WillMakeDept</label>
    <type>Checkbox</type>
</CustomField>