unpackaged/main/default/objects/Opportunity/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <description>This field is used for catching duplicates. Because the Opportunity is recreated every year it needs to account for that, and this is how.</description>
    <formula>TEXT(
IF(Month(Class_Start_Date__c )&lt;7, 
Year(Class_Start_Date__c)-1, 
Year( Class_Start_Date__c )) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>year</label>
    <type>Text</type>
</CustomField>