unpackaged/main/default/objects/Opportunity/fields/Yearly_Savings__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Savings__c</fullName>
    <formula>Yearly_Students__c * Saving_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yearly_Students__c * Saving_Number__c</inlineHelpText>
    <label>Yearly Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>