unpackaged/main/default/objects/Opportunity/fields/Yearly_Students__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Students__c</fullName>
    <formula>Fall_Students__c + Spring_Students__c + Summer_Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fall_Students__c + Spring_Students__c + Summer_Students__c</inlineHelpText>
    <label>Yearly Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>