unpackaged/main/default/objects/Opportunity/recordTypes/Book_Dept.recordType-meta.xml
<RecordType>
    <fullName>Book_Dept</fullName>
    <active>true</active>
    <businessProcess>Basic</businessProcess>
    <description>Book opportunity for departments</description>
    <label>Book Dept</label>
</RecordType>