unpackaged/main/default/objects/Opportunity/recordTypes/Book_Opp.recordType-meta.xml
<RecordType>
    <fullName>Book_Opp</fullName>
    <active>true</active>
    <businessProcess>Basic</businessProcess>
    <description>Books for individuals</description>
    <label>Book Opp</label>
</RecordType>