unpackaged/main/default/objects/Opportunity/recordTypes/Courseware.recordType-meta.xml
<RecordType>
    <fullName>Courseware</fullName>
    <active>true</active>
    <businessProcess>Basic</businessProcess>
    <description>Things like Rover (and eventually Tutor)</description>
    <label>Courseware</label>
</RecordType>