unpackaged/main/default/objects/Opportunity/recordTypes/Tutor_Opp.recordType-meta.xml
<RecordType>
    <fullName>Tutor_Opp</fullName>
    <active>true</active>
    <businessProcess>Tutor</businessProcess>
    <description>Tutor Opporutnities</description>
    <label>Tutor Opp</label>
</RecordType>