unpackaged/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Students__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Discovery,Demo,Verbal Commitment,Implementation</value>
    </filters>
    <label>My Opportunities</label>
</ListView>