unpackaged/main/default/objects/Opportunity/listViews/TSR.listView-meta.xml
<ListView>
    <fullName>TSR</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Max_Student_Number__c</field>
        <operation>lessThan</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>Bob McLaughlin</value>
    </filters>
    <label>TSR</label>
    <sharedTo />
</ListView>