unpackaged/main/default/objects/Opportunity/listViews/Tutor_Opportunites.listView-meta.xml
<ListView>
    <fullName>Tutor_Opportunites</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Tutor Opp</value>
    </filters>
    <label>Tutor Opportunites</label>
</ListView>